# ruminations

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
.github/workflows/: deploy.yml
documentation/: CMakeLists.txt  _config.yml.in  _toc.yml  changelog.md  code.md  dependencies.md  index.md  introduction.md  python.md  repository.md
environment/config/: requirements.txt
environment/configuration/: requirements.txt
environment/script/: serve_documentation.py
